# global-intel

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  vercel.json  vite.config.ts
api/: ais-snapshot.js  arxiv.js  coingecko.js  download.js  github-trending.js  hormuz-status.js  og-story.js  pizzint-dashboard.js  service-status.js  story.js  tech-events.js  theater-posture.js  version.js  worldbank.js
api/pizzint/: dashboard-data.js
e2e/: runtime-fetch.spec.ts
public/: offline.html
scripts/: ais-relay.cjs
src/: App.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: CountryTimeline.ts  CryptoChannelsPanel.ts  DeckGLMap.ts  ETFFlowsPanel.ts  HormuzTrafficPanel.ts  InvestmentsPanel.ts  MacroSignalsPanel.ts  MarketPanel.ts  NewsPanel.ts  Panel.ts  PentagonPizzaPanel.ts  RadiationPanel.ts  SanctionsPanel.ts  ServiceStatusPanel.ts  SignalBanner.ts  SocialSentimentPanel.ts  StablecoinPanel.ts  StoryModal.ts  TelegramOsintPanel.ts  VerificationChecklist.ts  index.ts
src/config/: index.ts  markets.ts  panels.ts  pipelines.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  nl.json  pl.json  pt.json  ru.json  sv.json  zh.json
src/services/: ais.ts  country-geometry.ts  hormuz-traffic.ts  index.ts  meta-tags.ts  persistent-cache.ts  polymarket.ts  radiation.ts  runtime-config.ts  runtime.ts  sanctions.ts  social-sentiment.ts  story-renderer.ts  story-share.ts  (+3 more)
tests/: runtime-harness.html
(+11 files in other folders)
