[package]
name = "global-intel"
version = "2.3.9"
description = "Global Intel desktop application"
authors = ["Global Intel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
